--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -1,11 +1,11 @@
-project.revision=5.4-SNAPSHOT
+project.revision=5.4.1.6-192
 # Stage: TRUNK | STABLE | BETA | other branch
-project.stage=5.4
+project.stage=5.4.1.6
 # Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
-project.version=5.4-SNAPSHOT
+project.version=5.4.1.6-192
 ivy.artifact.id=cpk-pentaho
 ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
-dependency.bi-platform.revision=5.4-SNAPSHOT
-dependency.kettle.revision=5.4-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=5.4-SNAPSHOT
+dependency.bi-platform.revision=5.4.1.6-192
+dependency.kettle.revision=5.4.1.6-192
+dependency.pentaho-cpf-plugin.revision=5.4.1.6-192
