--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -1,18 +1,18 @@
 # project properties
 project.id=cpk-core
-project.stage=master
-project.version=6.1-SNAPSHOT
+project.stage=6.1.0.9
+project.version=6.1.0.9-307
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=6.1-SNAPSHOT
+project.revision=6.1.0.9-307
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
-dependency.pentaho-platform.revision=6.1-SNAPSHOT
-dependency.kettle.revision=6.1-SNAPSHOT
-dependency.pentaho-metastore.revision=6.1-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=6.1-SNAPSHOT
+dependency.pentaho-platform.revision=6.1.0.9-307
+dependency.kettle.revision=6.1.0.9-307
+dependency.pentaho-metastore.revision=6.1.0.9-307
+dependency.pentaho-cpf-plugin.revision=6.1.0.9-307
 dependency.spring.framework.revision=3.2.14.RELEASE
 dependency.spring.mock.revision=2.0.8
