--- a/cpk-core/ivy.xml
+++ b/cpk-core/ivy.xml
@@ -48,9 +48,14 @@
     <dependency org="com.sun.jersey" name="jersey-client" rev="1.16" conf="test->default" transitive="false"/>
 
 
+
     <!--  third-party dependencies for tests -->
     <dependency org="com.google.guava" name="guava" rev="17.0" conf="test->default"/>
-     <dependency org="pentaho"             name="metastore"           rev="${dependency.pentaho-metastore.revision}"  conf="test->default" changing="true" />
+    <dependency org="pentaho"             name="metastore"           rev="${dependency.pentaho-metastore.revision}"  conf="test->default" changing="true" />
+    <dependency org="pentaho-kettle" name="kettle-json-plugin" rev="${dependency.kettle.revision}" transitive="false" conf="test->default"  changing="true">
+      <artifact name="kettle-json-plugin" type="jar" ext="jar" conf=""/>
+    </dependency>
+
     <!-- FIXME: UPDATE Tests to rely only on vfs2 -->
     <dependency org="commons-vfs"                     name="commons-vfs"              rev="1.0"         conf="test->default"      transitive="false"/>
 
