--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -12,6 +12,7 @@ ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
 dependency.pentaho-platform.revision=7.1-SNAPSHOT
 dependency.kettle.revision=7.1-SNAPSHOT
+kettle-json-plugin.version=7.1-SNAPSHOT
 dependency.pentaho-metastore.revision=7.1-SNAPSHOT
 dependency.pentaho-cpf-plugin.revision=7.1-SNAPSHOT
 dependency.spring.framework.revision=4.3.2.RELEASE
