--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -1,18 +1,18 @@
 # project properties
 project.id=cpk-core
-project.stage=master
-project.version=7.0-SNAPSHOT
+project.stage=7.0.0.5
+project.version=7.0.0.5-89
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=7.0-SNAPSHOT
+project.revision=7.0.0.5-89
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
-dependency.pentaho-platform.revision=7.0-SNAPSHOT
-dependency.kettle.revision=7.0-SNAPSHOT
-dependency.pentaho-metastore.revision=7.0-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=7.0-SNAPSHOT
+dependency.pentaho-platform.revision=7.0.0.5-89
+dependency.kettle.revision=7.0.0.5-89
+dependency.pentaho-metastore.revision=7.0.0.5-89
+dependency.pentaho-cpf-plugin.revision=7.0.0.5-89
 dependency.spring.framework.revision=4.3.2.RELEASE
 dependency.spring.mock.revision=2.0.8
