--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -1,11 +1,11 @@
-project.revision=7.0-SNAPSHOT
+project.revision=7.0.0.5-89
 # Stage: TRUNK | STABLE | BETA | other branch
-project.stage=master
+project.stage=7.0.0.5
 # Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
-project.version=7.0-SNAPSHOT
+project.version=7.0.0.5-89
 ivy.artifact.id=cpk-pentaho
 ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
-dependency.bi-platform.revision=7.0-SNAPSHOT
-dependency.kettle.revision=7.0-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=7.0-SNAPSHOT
+dependency.bi-platform.revision=7.0.0.5-89
+dependency.kettle.revision=7.0.0.5-89
+dependency.pentaho-cpf-plugin.revision=7.0.0.5-89
