--- a/cpk-core/ivy.xml
+++ b/cpk-core/ivy.xml
@@ -52,7 +52,7 @@
     <!--  third-party dependencies for tests -->
     <dependency org="com.google.guava" name="guava" rev="17.0" conf="test->default"/>
     <dependency org="pentaho"             name="metastore"           rev="${dependency.pentaho-metastore.revision}"  conf="test->default" changing="true" />
-    <dependency org="pentaho-kettle" name="kettle-json-plugin" rev="${kettle-json-plugin.version}" transitive="false" conf="test->default"  changing="true">
+    <dependency org="org.pentaho.kettle.plugins" name="kettle-json-plugin" rev="${kettle-json-plugin.version}" transitive="false" conf="test->default"  changing="true">
       <artifact name="kettle-json-plugin" type="jar" ext="jar" conf=""/>
     </dependency>
 
