--- a/cpk-pentaho/build.properties
+++ b/cpk-pentaho/build.properties
@@ -1,11 +1,11 @@
-project.revision=6.1-SNAPSHOT
+project.revision=6.1.0.17-379
 # Stage: TRUNK | STABLE | BETA | other branch
-project.stage=master
+project.stage=6.1.0.17
 # Version: a numeric value or SNAPSHOT. SNAPSHOT is replaced by DSTAMP
-project.version=6.1-SNAPSHOT
+project.version=6.1.0.17-379
 ivy.artifact.id=cpk-pentaho
 ivy.artifact.group=pentaho
 impl.title=Community Plugin Kickstarter
-dependency.bi-platform.revision=6.1-SNAPSHOT
-dependency.kettle.revision=6.1-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=6.1-SNAPSHOT
+dependency.bi-platform.revision=6.1.0.17-379
+dependency.kettle.revision=6.1.0.17-379
+dependency.pentaho-cpf-plugin.revision=6.1.0.17-379
