--- a/cpk-core/build.properties
+++ b/cpk-core/build.properties
@@ -1,19 +1,19 @@
 # project properties
 project.id=cpk-core
-project.stage=master
-project.version=8.0-SNAPSHOT
+project.stage=8.0.0.0
+project.version=8.0.0.0-28
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=8.0-SNAPSHOT
+project.revision=8.0.0.0-28
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-core
-dependency.pentaho-platform.revision=8.0-SNAPSHOT
-dependency.kettle.revision=8.0-SNAPSHOT
-kettle-json-plugin.version=8.0-SNAPSHOT
-dependency.pentaho-metastore.revision=8.0-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=8.0-SNAPSHOT
+dependency.pentaho-platform.revision=8.0.0.0-28
+dependency.kettle.revision=8.0.0.0-28
+kettle-json-plugin.version=8.0.0.0-28
+dependency.pentaho-metastore.revision=8.0.0.0-28
+dependency.pentaho-cpf-plugin.revision=8.0.0.0-28
 dependency.spring.framework.revision=4.3.2.RELEASE
 dependency.spring.mock.revision=2.0.8
