--- a/cpk-pentaho5/build.properties
+++ b/cpk-pentaho5/build.properties
@@ -1,18 +1,18 @@
 # project properties
 project.id=cpk-pentaho5
-project.stage=master
-project.version=8.0-SNAPSHOT
+project.stage=8.0.0.0
+project.version=8.0.0.0-28
 
 # do NOT change project.revision property, unless you really need to override it to a custom revision name
-project.revision=8.0-SNAPSHOT
+project.revision=8.0.0.0-28
 
 # ivy properties
 impl.title=Community Plugin Kickstarter
 ivy.artifact.group=pentaho
 ivy.artifact.id=cpk-pentaho5
-dependency.pentaho-platform.revision=8.0-SNAPSHOT
-dependency.kettle.revision=8.0-SNAPSHOT
-dependency.pentaho-cpf-plugin.revision=8.0-SNAPSHOT
+dependency.pentaho-platform.revision=8.0.0.0-28
+dependency.kettle.revision=8.0.0.0-28
+dependency.pentaho-cpf-plugin.revision=8.0.0.0-28
 dependency.spring.framework.revision=4.3.2.RELEASE
 dependency.spring.security.revision=4.1.3.RELEASE
 dependency.spring.mock.revision=2.0.8
