--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,11 +10,11 @@
   <parent>
     <groupId>org.pentaho.ctools</groupId>
     <artifactId>cpk-parent</artifactId>
-    <version>10.2.0.0-SNAPSHOT</version>
+    <version>10.2.0.2-262</version>
   </parent>
 
   <properties>
-    <encryption-support.version>10.2.0.0-SNAPSHOT</encryption-support.version>
+    <encryption-support.version>10.2.0.2-262</encryption-support.version>
   </properties>
 
   <dependencies>
