--- a/pentaho5/pom.xml
+++ b/pentaho5/pom.xml
@@ -101,7 +101,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-mock</artifactId>
+      <artifactId>spring-test</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -127,9 +127,17 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>net.sf.ehcache</groupId>
-      <artifactId>ehcache-core</artifactId>
-      <scope>test</scope>
+    <groupId>org.ehcache</groupId>
+    <artifactId>ehcache</artifactId>
+    <version>${ehcache-core.version}</version>
+    <classifier>jakarta</classifier>
+    <scope>test</scope>
+    <exclusions>
+      <exclusion>
+        <artifactId>*</artifactId>
+        <groupId>*</groupId>
+      </exclusion>
+    </exclusions>
     </dependency>
     <dependency>
       <groupId>net.bytebuddy</groupId>
