--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
   <groupId>org.pentaho.ctools</groupId>
   <artifactId>cpk-parent</artifactId>
-  <version>11.0.0.0-SNAPSHOT</version>
+  <version>11.0.0.0-14</version>
   <packaging>pom</packaging>
   <name>CPK Parent</name>
   
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>11.0.0.0-SNAPSHOT</version>
+    <version>11.0.0.0-14</version>
   </parent>
 
   <scm>
@@ -21,12 +21,12 @@
   </scm>
 
   <properties>
-    <pentaho-cpf-plugin.version>11.0.0.0-SNAPSHOT</pentaho-cpf-plugin.version>
-    <pentaho-cpk-plugin.version>11.0.0.0-SNAPSHOT</pentaho-cpk-plugin.version>
-    <platform.version>11.0.0.0-SNAPSHOT</platform.version>
-    <pdi.version>11.0.0.0-SNAPSHOT</pdi.version>
-    <metastore.version>11.0.0.0-SNAPSHOT</metastore.version>
-    <pdi-json-plugin.version>11.0.0.0-SNAPSHOT</pdi-json-plugin.version>
+    <pentaho-cpf-plugin.version>11.0.0.0-14</pentaho-cpf-plugin.version>
+    <pentaho-cpk-plugin.version>11.0.0.0-14</pentaho-cpk-plugin.version>
+    <platform.version>11.0.0.0-14</platform.version>
+    <pdi.version>11.0.0.0-14</pdi.version>
+    <metastore.version>11.0.0.0-14</metastore.version>
+    <pdi-json-plugin.version>11.0.0.0-14</pdi-json-plugin.version>
     <commons-lang.version>2.6</commons-lang.version>
     <ehcache-core.version>2.5.1</ehcache-core.version>
     <jsr311-api.version>1.1.1</jsr311-api.version>
